# riscv-console

./: game.md  phase2.md  phase3.md
baseline-cartridge/src/: main.c
cartridge/: Makefile
cartridge/src/: api.c  api.h  main.c  startup.c  startup.h
firmware/: Makefile
firmware/src/: game.c  game.h  interrupt.s  interrupt_handler.c  interrupt_handler.h  memory_management.c  memory_management.h  scheduler.c  scheduler.h  sprite_management.c  sprite_management.h  sprite_managment.h  startup.c  text.c  text.h  thread.c  thread.h  threads.s
group-8/: README.md
group-8/Cartridge/: 0riscv-console-example.strip  Makefile  riscv32-console.ld
group-8/Cartridge/Sprite Kit/: Sprite_to_H_File.ipynb
group-8/Cartridge/Sprite Kit (Sample)/: Sprite_to_H_File.ipynb  spriteData.h
group-8/Cartridge/src/: cloud.c  cloud.h  constants.h  interrupt.s  main.c  obstacle.c  obstacle.h  spriteData.h  startup.c  usefulValues.h  utils.c  utils.h
group-8/Cartridge/src/syscalls/: events.h  graphics.c  graphics.h  input.h  memory.c  (+4 more)
group_11/: CMakeLists.txt  Makefile  cartridge  cmake_install.cmake  readme.md  riscv32-console.ld
group_11/PureC-Software-Renderer/: CMakeLists.txt
group_11/PureC-Software-Renderer/Mango/: Makefile  cmake_install.cmake
group_11/cartridge/: readme.md
group_11/src/: main.c
main-program/src/: interrupt.s  interrupt_handler.c  interrupt_handler.h  main.c  sprite_managment.h  startup.c
riscv-example/: interrupt_handler.h
riscv-example/src/: interrupt_handler.c  main.c  sprite_management.c  startup.c
riscv-sim/src/gtk3/: GUIApplicationGTK3.cpp
